UY-1219 add base tests